# deploy-to-s3

./: .env_template  .gitignore  LICENSE.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
deploy_to_s3/: deploy.py
src/deploy_to_s3/: __main__.py  cli.py  deploy.py  logger.py
src/deploy_to_s3/constants/: literals.py  models.py
tests/: test_deploy_to_s3.py
