[project]
name = "deploy-to-s3"
version = "1.0.0"
description = "GitHub Action: upload a built dist/ directory to S3 and invalidate CloudFront."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Amin Beigi", email = "me@aminbeigi.com" }]
dependencies = [
    "boto3>=1.42.68",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "deploy_to_s3/",
]
